--- a/SPITest.ioc
+++ b/SPITest.ioc
@@ -17,7 +17,6 @@ Mcu.IP1=DAC
 Mcu.IP10=USART2
 Mcu.IP11=USART3
 Mcu.IP12=USART6
-Mcu.IP13=USB_OTG_FS
 Mcu.IP2=ETH
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -26,7 +25,7 @@ Mcu.IP6=SPI2
 Mcu.IP7=SPI4
 Mcu.IP8=SPI5
 Mcu.IP9=SYS
-Mcu.IPNb=14
+Mcu.IPNb=13
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -116,12 +115,10 @@ PA10.Signal=USB_OTG_FS_ID
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=USB_DM
 PA11.Locked=true
-PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.GPIOParameters=GPIO_Label
 PA12.GPIO_Label=USB_DP
 PA12.Locked=true
-PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
@@ -158,12 +155,10 @@ PA7.Signal=ETH_CRS_DV
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=USB_SOF [TP1]
 PA8.Locked=true
-PA8.Mode=Activate_SOF_FS
 PA8.Signal=USB_OTG_FS_SOF
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=USB_VBUS
 PA9.Locked=true
-PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
@@ -336,7 +331,7 @@ RCC.I2C3Freq_Value=48000000
 RCC.I2C4Freq_Value=48000000
 RCC.I2SClocksFreq_Value=48000000
 RCC.I2SFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SClocksFreq_Value,I2SFreq_Value,LCDTFTFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PRESCALERUSB,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
+RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SClocksFreq_Value,I2SFreq_Value,LCDTFTFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PRESCALERUSB,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
 RCC.LCDTFTFreq_Value=96000000
 RCC.LCDTFToutputFreq_Value=96000000
 RCC.LPTIM1Freq_Value=48000000
@@ -361,6 +356,7 @@ RCC.PLLSAIPCLKFreq_Value=192000000
 RCC.PLLSAIQCLKFreq_Value=192000000
 RCC.PLLSAIRCLKFreq_Value=192000000
 RCC.PLLSAIoutputFreq_Value=192000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PRESCALERUSB=RCC_USBCLKSOURCE_PLL_DIV1_5
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
@@ -431,8 +427,6 @@ USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USART6.IPParameters=VirtualMode-Asynchronous
 USART6.VirtualMode-Asynchronous=VM_ASYNC
-USB_OTG_FS.IPParameters=VirtualMode
-USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F767ZI
